# rosneuro_recorder

./: CMakeLists.txt  README.md  package.xml
example/: RunRecorder.cpp  RunWriterFactory.cpp
include/rosneuro_recorder/: DummyWriter.hpp  FactoryWriter.hpp  Recorder.hpp  Writer.hpp  XDFWriter.hpp
launch/: recorder.launch
src/: .Recorder.cpp.swp  .Writer.cpp.swp  DummyWriter.cpp  FactoryWriter.cpp  Recorder.cpp  Writer.cpp  XDFWriter.cpp  recorder.cpp  test_writerfactory.cpp
test/: TestDummyWriter.cpp  TestFactoryWriter.cpp  TestRecorder.cpp  TestWriter.cpp  TestXdfWriter.cpp  test_dummy_writer.cpp  test_factory_writer.cpp  test_recorder.cpp  test_xdf_writer.cpp
