<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_recorder</name>
  <version>1.0.0</version>
  <description>ROSNEURO Recorder package to record Neural data</description>
  <author email="luca.tonin@dei.unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@dei.unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosneuro_data</depend>
  <depend>rosneuro_msgs</depend>
  <depend>message_generation</depend>
  
  <exec_depend>message_runtime</exec_depend>

</package>
